<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group
        android:id="@+id/header_menu_buttons"
        android:visible="false">
        <item android:id="@+id/new_reminder"
            android:icon="@drawable/new_reminder_button"
            android:title="@string/create_new_reminder"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/header_search_button"
            android:icon="@drawable/search_button"
            android:title="@string/search_for_a_reminder"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/header_diagram_button"
            android:icon="@drawable/diagram_button"
            android:title="@string/open_diagrams"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/header_settings_button"
            android:icon="@drawable/settings_button"
            android:title="@string/open_settings"
            app:showAsAction="ifRoom"/>
    </group>

    <item android:id="@+id/open_close_header_button"
        android:icon="@drawable/closed_menu_button"
        android:title="@string/open_settings"
        app:showAsAction="always"/>

</menu>