<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:clickable="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/day_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/frag_background"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:isScrollContainer="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/select_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/monday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            app:layout_constraintBottom_toTopOf="@id/select_tuesday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/select_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_monday"
            app:layout_constraintBottom_toTopOf="@id/select_wednesday"/>

        <Button
            android:id="@+id/select_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_tuesday"
            app:layout_constraintBottom_toTopOf="@id/select_thursday"/>

        <Button
            android:id="@+id/select_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_wednesday"
            app:layout_constraintBottom_toTopOf="@id/select_friday"/>

        <Button
            android:id="@+id/select_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_thursday"
            app:layout_constraintBottom_toTopOf="@id/select_saturday"/>

        <Button
            android:id="@+id/select_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_friday"
            app:layout_constraintBottom_toTopOf="@id/select_sunday"/>

        <Button
            android:id="@+id/select_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday_select_string"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:background="@drawable/custom_select_day_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_saturday"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>