<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:clickable="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment__background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/frag_background"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:isScrollContainer="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/description_txt"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/description_txt"
            app:layout_constraintBottom_toTopOf="@+id/select_days_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressbar_in_reminder"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <ProgressBar
            android:id="@+id/progressbar_in_reminder"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:elevation="1dp"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toTopOf="@+id/description_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_reminder_txt" />

        <TextView
            android:id="@+id/progress_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:paddingTop="3dp"
            android:text="00:00"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressbar_in_reminder"
            app:layout_constraintEnd_toEndOf="@id/progressbar_in_reminder"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="@id/progressbar_in_reminder"
            app:layout_constraintTop_toTopOf="@id/progressbar_in_reminder"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/select_days_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timer_button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_days_button"
            app:layout_constraintBottom_toTopOf="@+id/timer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_txt" />

        <Button
            android:id="@+id/timer_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            android:background="@drawable/timer_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"/>

        <Button
            android:id="@+id/accept_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/accept_button"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.200"
            app:layout_constraintStart_toEndOf="@+id/timer_button"
            app:layout_constraintTop_toTopOf="@+id/timer_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/delete_button"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timer_button"
            app:layout_constraintHorizontal_bias="0.800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timer_button" />

        <TextView
            android:id="@+id/title_reminder_txt"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_txt"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>